fix text alignment of search results

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -745,6 +745,7 @@ input.city-input {
     font-family: $promo-font;
     color: $grey;
     margin-bottom: 20px;
+    text-align: center;
   }
 }
 .map {
